# tiktok-metadata-kit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  release-testpypi.yml  test.yml
requirements/: base.txt  dev.txt
src/tiktok_metadata_kit/: __init__.py
src/tiktok_metadata_kit/research_api/: __init__.py  client.py  config.py  exceptions.py  tests.py
src/tiktok_metadata_kit/scraper/: client.py  config.py  cookies.py  exceptions.py  parsers.py  scraper.py  tests.py  utils.py
tests/integration/research_api/: conftest.py  test_live.py
tests/research_api/: conftest.py  test_auth.py  test_pagination.py  test_queries.py  test_retry.py
