# ==== Packaging (hatchling) ====
[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

# Version is derived from the most recent `v*` git tag by hatch-vcs.
# See https://github.com/ofek/hatch-vcs and the CI / Release section in
# README.md.
[tool.hatch.version]
source = "vcs"

# ==== Project details ====
[project]
name = "tiktok-metadata-kit"
dynamic = ["version"]
authors = [
  { name="Nico Pfiffner", email="nico-ap@proton.me" },
]
description = "Python library for TikTok metadata collection, with support for web scraping and the TikTok Research API."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Sociology",
    "Typing :: Typed",
]
keywords = ["tiktok", "research-api", "metadata", "scraping", "social-media"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "httpx>=0.28",
]

[project.optional-dependencies]
scraper = [
    "beautifulsoup4>=4.14",
    "selenium>=4.44",
]

[project.urls]
Homepage = "https://github.com/Nico-AP/tiktok-metadata-kit"
Repository = "https://github.com/Nico-AP/tiktok-metadata-kit"
Issues = "https://github.com/Nico-AP/tiktok-metadata-kit/issues"
Changelog = "https://github.com/Nico-AP/tiktok-metadata-kit/releases"

# ==== ruff ====
[tool.ruff]
target-version = "py312"
extend-exclude = []

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "ASYNC",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EM",
    "EXE",
    "FA",
    'ISC',
    "ICN",
    "G",
    'INP',
    'PIE',
    "T20",
    'PYI',
    'PT',
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TC",
    "INT",
    # "ARG", # Unused function argument
    "PTH",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    # "NPY",
    # "AIR",
    "PERF",
    # "FURB",
    # "LOG",
    "RUF",
]
ignore = [
    "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
    "SIM102", # sometimes it's better to nest
    "UP038", # Checks for uses of isinstance/issubclass that take a tuple
    # of types for comparison.
    # Deactivated because it can make the code slow:
    # https://github.com/astral-sh/ruff/issues/7871
    "FBT001",
    "COM812",
    "ANN003",
]
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = ["UP038", ]

[tool.ruff.lint.isort]
force-single-line = false

[tool.ruff.lint.per-file-ignores]
"test*.py" = ["SLF001", "PLR2004", "FBT003", "PT009", "S106", "PT027", "S105"]

# ==== pytest ====
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: hits a real TikTok API endpoint (requires credentials in env vars)",
]
# Skip integration tests by default; run them explicitly with `pytest -m integration`.
addopts = "-m 'not integration'"

# ==== Coverage ====
[tool.coverage.run]
include = ["src/**"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true
fail_under = 80

# ==== mypy ====
[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = []
